# word-extractor

./: package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  extract.rs  mod.rs  template.rs
src-tauri/src/models/: document.rs  mod.rs  result.rs  rule.rs
src-tauri/src/parsers/: docx.rs  element.rs  mod.rs
src/components/: FileList.vue  Preview.vue  RuleConfig.vue
src/stores/: main.ts
src/types/: index.ts
